Correct shortcut toolbar spacing and wrap.

--- a/css/orfex.scss
+++ b/css/orfex.scss
@@ -10,6 +10,17 @@ $bulletins_bgcolor: #fffaf0;
 $bulletins_border: #ed8936;
 $admin_menu_bgcolor: black;
 
+#toolbar {
+	div.toolbar-drawer {
+		padding: 0;
+	}
+	div.toolbar-shortcuts {
+		display: inline-block;
+	}
+}
+
+
+
 .page-node-107192, .page-atrium-faculty-directory, .page-atrium-admin-staff-directory, .page-atrium-research-staff-directory {
 	#page-wrapper {
 		background: black;
@@ -250,6 +261,7 @@ ul li {
 display: inline;
 vertical-align: middle;
 margin: 0 0.25em 0 0.25em;
+padding: 0;
 }
 
 ul {
